# XO_OX-XOmnibus

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  FONT_CATALOG_2026-03-25.md  LICENSE  MORNING_PLAN.md  NIGHTLY_CLEANUP_REPORT.md  OXPORT_QDD_DOSSIER_2026-04-05.md  OXYTOCIN_NOTE_DURATION_PATTERN.md  README.md  SECURITY.md  eslint.config.mjs  fix_duplicate_preset_names.py  iOS_PORT_STRUCTURE_MAP.md  pack_registry.json  package.json  plan.md  recipe_book.md  tailwind.config.ts  tidesigns-survey.md  vercel.json
.claude/: framework-manifest.json
.claude/context/: dsp-patterns.md  framework-levels.md  preset-conventions.md  skill-mining.md  skill-template.md  (+1 more)
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
Docs/: 12-month-extended-roadmap-2026-2027.md  6-month-release-calendar-2026.md  GOVERNANCE.md  INDEX.md  MANIFEST.md  MPC_Controller_Setup.md  XOLOKUN_CSS_SPEC.md  XOmnibus_Master_Architecture- Volume 2.md.txt  ai-subsystem.md  aquarium-42-engines-2026-03-20.md  audio-capture-workflow.md  audio_to_buffer_implementation.md  audio_to_buffer_phase2.md  audio_to_buffer_phase3_spec.md  battle-plan-150-tracks-2026-03-25.md  battle-plan-session-guide.md  blessing-reclassification-2026-03-24.md  board-audit-2026-03-24.md  bob_aggression_expansion.md  build-sentinel-2026-03-20.md  build-sentinel-2026-03-24.md  build_verification_11j.md  build_verification_12j.md  build_verification_8h.md  cellar-quad-architecture.md  changelog-v1-producer.md  changelog-v1-technical.md  claude-md-audit-2026-03-24.md  claude_code_skills_reference.md  code_health_report.md  community-activation-2026-03-20.md  community-challenge-01-the-corridor.md  community-challenge-02-the-architect.md  community-challenge-03-the-reef.md  community-strategy-v2.md  content-backlog-6-month-2026.md  coupling-cookbook-v1.md  coupling_audit.md  coupling_expansion_12e.md  coupling_fixes_5c.md  (+235 more)
Installer/: build_pkg.sh  distribution.xml  entitlements.plist
ObrixPocket/: README.md  project.yml
Resources/: CreatureDriverMap.json  Init.xometa
SDK/: README.md
Server/: SETUP.md
Skills/: README.md
Source/: XOceanusProcessor.cpp  XOceanusProcessor.h  XOlokunProcessor.cpp  XOlokunProcessor.h  XOmnibusProcessor.cpp  XOmnibusProcessor.h
Tests/: CMakeLists.txt  FamilyWaveguideTest.cpp  run_tests.cpp
Tests/BenchmarkTests/: CPUBenchmarkTests.cpp  CPUBenchmarkTests.h
Tests/CouplingTests/: CouplingMatrixTests.cpp  CouplingMatrixTests.h
Tests/DSPTests/: DNAModulationBusTests.cpp  DSPComponentTests.cpp  DSPComponentTests.h  DSPStabilityTests.cpp  DSPStabilityTests.h  MoodModulationBusTests.cpp
Tests/DoctrineTests/: DoctrineTests.cpp  DoctrineTests.h
Tests/ExportTests/: XPNExportTests.cpp  XPNExportTests.h
Tests/ParameterSweepTests/: ParameterSweepTests.cpp  ParameterSweepTests.h
Tests/PipelineTests/: FullPipelineTests.cpp  FullPipelineTests.h
Tests/PlaySurfaceTests/: GestureTrailTests.cpp  GestureTrailTests.h  HarmonicFieldTests.cpp  HarmonicFieldTests.h
Tests/PresetTests/: BackwardCompatibilityTests.cpp  BackwardCompatibilityTests.h  CommandPaletteTests.cpp  PresetRoundTripTests.cpp  PresetRoundTripTests.h  SaveAsTests.cpp  SavePresetDialogTests.cpp  SchemaV2Tests.cpp
Tests/PresetTests/fixtures/: v1-sample.xometa  v2-full.xometa  v2-malformed-category.xometa  v2-minimal.xometa
Tests/RegressionTests/: AudioRegressionTests.cpp  AudioRegressionTests.h
Tests/Tools/: test_preset_tools.py
Tools/: DEPENDENCY_MAP.txt  DISCLAIMER.txt  OXPORT_USER_GUIDE.md  OXPORT_WIRING_TODO.md  README.md  README_CATALOG.md  TOOLCHAIN_CATALOG_DETAILED.md  TOOLCHAIN_CATALOG_SUMMARY.txt  TOOL_REGISTRY.json  VALIDATION_REPORT_2026_03_24.txt  add_missing_dna.py  apply_renames.py  audit_sonic_dna.py  batch_patch_stubs.py  benchmark_organon.cpp  breed_presets.py  ci_check_velocity_parity.py  cleanup_task3_dna.py  cleanup_task6_skeletons.py  cleanup_task7_single_engine.py  compute_preset_dna.py  convert_xoppossum.py  dedup_preset_names.py  enable-git-hooks.sh  engine_registry.py  extract_cpp_presets.py  find_missing_dna.py  fix_261_quarantine_reason.py  fix_264_standardize_folder_structure.py  fix_425_447_macro_format.py  fix_428_phantom_engine_declarations.py  fix_446_macro_prefix_migration.py  fix_448_same_mood_dups.py  fix_drift_adsr_units.py  fix_drift_presets.py  fix_duplicate_names.py  fix_f4_audit.py  fix_mood_and_entangled.py  fix_overworld_presets.py  fix_preset_jargon.py  (+388 more)
android/obrixreef/app/src/main/cpp/: CMakeLists.txt  obrix_audio_engine.cpp  obrix_audio_engine.h  obrix_jni.cpp  obrix_param_queue.h
builds/: seed_sessions.json
cmake/: README-ios-build.md  ios-toolchain.cmake
iOS/: ObrixPocket-Info.plist  ObrixPocket.entitlements  XOceanus-AUv3-Info.plist  XOceanus-AUv3.entitlements  XOlokun-AUv3-Info.plist
journal/: 009-the-porthole.md
knowledge/: index.md
libobrix/: CMakeLists.txt
packs/: mpce-perc-001-test.oxbuild  mpce-perc-001.oxbuild  onset-deep-water.oxpack  render_spec.json
patreon/: README.md  week-1-coupled-bounce.md  week-2-belly-to-bite.md  week-3-coral-investigations.md  week-4-thermocline-dispatch.md  week-5-tidal-dialogue.md  xpn-bundle-config.json
profiles/: ambient-texture.yaml  boom-bap-percussion.yaml  trap-drums.yaml
public/: manifest.json
scripture/: cadence-log.md  the-scripture.md
site/: aquarium.html  character-lab-v2.html  character-lab-v3.html  character-lab-v4.html  character-lab.html  community.html  coupling-protocol.html  design-tokens.css  engine-creature-map.json  expedition.html  feed.xml  freebies.html  guide-aquatic-fx.html  guide-collections.html  guide-coupling-obrix-pairs.html  guide-coupling.html  guide-guru-bin-vol2.html  guide-obrix-masterclass.html  guide-obrix.html  guide-oracle.html  guide-organism.html  guide-sdk-engine.html  guide.html  index.html  instrument-demo.html  learn.html  manifesto.html  packs.html  robots.txt  sitemap.xml  updates.html
src-tauri/: Cargo.toml
(+53756 files in other folders)
